# Machine-learning-based-WAF-for-signatures-and-anomaly-detection-using-feature-extraction

./: .gitattributes  README.md  XSS.csv  advanced_waf_logger.py  automated_updater.py  benign5.csv  bruteforce.csv  cert.crt  cleaned_dataset.csv  csv_checker_cleaner.py  data.json.txt  evaluate_invokecmds.py  final.py  hybrid_model.pkl  hybrid_waf_model.joblib  invoke-rest.py  invokecmds.txt  key.pem  load_logs.py  main.py  main_final.py  main_ml_waf.py  main_waf_server.py  ml_waf_main.py  mlwaf_model.joblib  new text.txt  plugin_kwargs.json  proxy.py  pyproject.toml  requirements.txt  setup.py  test.py  test_api_final.ps1  train_hybrid_model.py  waf_proxy.py  waf_test_dataset_balanced_final.csv  waf_training_logs.csv
ML-BASED-WAF-FOR-SIGNATURES-AND-ANOMALY-DETECTION-USING-FEATURE-EXTRACTION.git/: config
ml-waf-env/: PROFILE.txt  logs.txt
ml-waf-env/Scripts/: activate  activate.bat
src/core/: __init__.py  feature_extractor.py  hybrid__waf__model.py
src/ml_waf_project.egg-info/: SOURCES.txt  requires.txt
templates/: index.html
