# pyproject.toml

[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_waf_project"
version          = "0.1.0"
description      = "Hybrid ML-driven WAF project"
requires-python  = ">=3.8"
dependencies     = [
  "proxy.py>=2.0",
  "scikit-learn>=1.0",
  "joblib>=1.2",
  "flask>=2.0",
  "pandas>=1.3",
  "plotly>=5.0",
]

[tool.setuptools.packages.find]
where   = ["src"]
include = [
  "core*",
  "my_waf*",
]
